# mirage-protocol

./: README.md
bridge/: .dockerignore  .env.example  README.md  bun.lockb  docker-compose.yml  main.js  package-lock.json  package.json
bridge/src/artifacts/icp/: bridge_mediator.did  bridge_mediator.did.d.ts  index.d.ts  index.js
bridge/src/core/: Core.ts  Router.ts  Utils.ts
bridge/src/plugins/evm/: EvmListener.ts  index.ts
bridge/src/plugins/icp/: IcpExecutor.ts
bridge/types/ethers-contracts/: ERC721.ts
bridge/types/ethers-contracts/factories/: ERC721__factory.ts
evm/: foundry.toml  package.json
evm-icp-bridge/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bun.lockb  docker-compose.yml  index.ts  package.json
evm-icp-bridge/local/bridge/: example-key.pem  example.pem
evm-icp-bridge/local/evm/: .gitignore  Dockerfile  README.md
evm-icp-bridge/local/evm/src/: BridgeMediator.sol
evm-icp-bridge/local/icp/: Cargo.toml  Dockerfile  README.md  dfx.json
evm-icp-bridge/src/artifacts/: EvmBridgeContract.json  EvmBridgeMediator.json  IcpBridgeCanister.js  README.md
evm-icp-bridge/src/artifacts/evm/: EvmBridgeMediator.json  README.md
evm-icp-bridge/src/artifacts/icp/: bridge_mediator.did  bridge_mediator.did.d.ts  bridge_mediator.did.js
evm-icp-bridge/src/core/: Core.ts  Router.ts  Types.ts
evm-icp-bridge/src/plugins/common/: Plugin.ts
evm-icp-bridge/src/plugins/evm/: EvmExecutor.ts  EvmListener.ts  EvmPlugin.ts  index.ts
evm-icp-bridge/src/plugins/icp/: IcpExecutor.ts  IcpListener.ts  index.ts  metadataParser.ts
evm-icp-bridge/src/utils/: envReader.ts
evm-icp-bridge/test/: docker-compose.yml
evm-icp-bridge/types/ethers-contracts/: BridgeMediator.ts  EvmBridgeContract.ts  EvmBridgeMediator.ts  index.ts
evm-icp-bridge/types/ethers-contracts/factories/: BridgeMediator__factory.ts  index.ts  (+2 more)
evm/script/: Deploy.s.sol
evm/src/: BridgeMediator.sol  Manager.sol  ManagerErrors.sol  ManagerEvents.sol  ManagerTypes.sol  NFTVault.sol  NFTVaultErrors.sol  NFTVaultEvents.sol
evm/src/interfaces/: IBridgeMediator.sol  IManager.sol  INFTVault.sol
evm/test/: Manager.t.sol  NFTExample.sol  NFTVault.t.sol
icp/: Cargo.toml  README.md
icp-mirage/: .gitignore  Cargo.toml  dfx.json
icp-mirage/backend/icrc-7/: Cargo.toml  bridge_common_layer.did  icrc-7.did  icrc7.did  manager.did  token_factory.did
icp-mirage/backend/icrc-7/src/: bridge_common_layer.rs  icrc7.rs  lib.rs  manager.rs  token.rs  token_factory.rs
icp-mirage/backend/icrc-7/tests/: tests.rs
icp-mirage/scripts/: deploy.sh  mint_burn_demo.sh  mint_demo.sh
icp-mirage/src/bridge_common_layer/: Cargo.toml  bridge_common_layer.did
icp-mirage/src/bridge_common_layer/src/: lib.rs  main.rs
icp-mirage/src/icrc7/: Cargo.toml  icrc7.did
icp-mirage/src/manager/: Cargo.toml  manager.did
icp-mirage/src/manager/src/: lib.rs  main.rs
icp-mirage/src/token_factory/: Cargo.toml  token_factory.did
icp-mirage/src/vault/: cargo.toml  vault.did
icp/src/bridge_common_layer/: Cargo.toml
icp/src/icrc7/: Cargo.toml
icp/src/manager/: Cargo.toml
icp/src/manager/src/: types.rs
icp/src/token_factory/: token_factory.did
icp/src/vault/: Cargo.toml
scripts/: demo.sh
send_http_post_rust/: Cargo.toml  README.md
send_http_post_rust/src/send_http_post_rust_backend/: Cargo.toml
send_http_post_rust/src/send_http_post_rust_backend/src/: lib.rs
server/: README.md  index.ts
(+18 files in other folders)
