[package]
name = "icrc-7"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
ic-cdk-timers = "0.9.0"
ic-cdk-macros = "0.15.0"
ic-stable-structures = "0.6.5"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
# These dependencies are only compiled for tests
serde = "1.0"
serde_json = "1.0"