[package]
name = "bridge_common_layer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bridge_common_layer"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
ic-cdk-timers = "0.9.0"
ic-cdk-macros = "0.15.0"
ic-stable-structures = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
icrc7 = { path = "../icrc7" }


[dev-dependencies]