[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "manager"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16.0"
ic-stable-structures = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
icrc7 = { path = "../icrc7" }


[dev-dependencies]